--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,11 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "server/index.ts",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "client/vite.config.ts",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "client/dist" }
-    }
+    { "src": "server/index.ts", "use": "@vercel/node" },
+    { "src": "vite.config.ts", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "server/index.ts" },
-    { "src": "/(.*)", "dest": "/client/dist/$1" }
+    { "src": "/(.*)", "dest": "/dist/$1" }
   ]
 }
