--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "server/index.ts", "use": "@vercel/node" },
-    { "src": "vite.config.ts", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
+    {
+      "src": "server/index.ts",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
+    }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "server/index.ts" },
